--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Technical Exercise</title>
+    <title>Technical Exercise - Kenneth Calvo</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
